--- a/Blog.html
+++ b/Blog.html
@@ -9,5 +9,6 @@
     <h1>Pagina do Blog</h1>
     <h2>Post numero 1</h2>
     <h2>Post numero 2</h2>
+    <a href="index.html">Voltar para pagina Inicial</a>
 </body>
 </html>
