--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Pagina Home</h1>
     <a href="Vendas.html">Ir para a pagina de Vendas</a> 
+    <p></p>
+    <a href="Blog.html">Ir para a pagina de Vendas</a> 
 </body>
 </html>
